--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -40,7 +39,7 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion '1.5.8'
     }
-    packagingOptions {
+    packaging {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
@@ -60,7 +59,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
 
     // Navigation
-    implementation 'androidx.navigation:navigation-compose:2.7.6'
+    implementation 'androidx.navigation:navigation-compose:2.7.7'
 
     // Image loading
     implementation 'io.coil-kt:coil-compose:2.5.0'
